cluster/core/networking/whoami/ingress-external.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-external
  namespace: networking
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "WhoAmI"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: "external"
    traefik.ingress.kubernetes.io/router.middlewares: networking-protected@kubernetescrd
spec:
  rules:
    - host: "whoami.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  name: http
            path: /
            pathType: Prefix
