cluster/core/networking/whoami/ingress-health.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-health
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: "external"
    traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd,networking-add-health@kubernetescrd
spec:
  rules:
    - host: "health.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  name: http
            path: /
            pathType: Prefix
