cluster/core/networking/whoami/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-internal
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: "whoami.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  name: http
            path: /
            pathType: Prefix
